--- a/Tp3_Regex.ipynb
+++ b/Tp3_Regex.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 18,
    "id": "98bce14f-98b2-4855-99c3-284c9f0f1322",
    "metadata": {
     "jupyter": {
@@ -48,13 +48,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "db4c55db-2416-43bc-83b3-07eea37df2d7",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['a', 'a', 'A', 'a', 'a', 'a', 'a', 'A', 'a', 'a', 'a', 'a', 'a', 'a', 'a', 'a', 'a', 'a', 'a', 'a', 'a', 'a', 'a', 'a', 'a', 'a', 'A', 'a', 'a', 'A', 'a', 'a', 'a', 'a', 'a', 'a', 'a', 'a', 'a', 'A', 'a', 'a', 'a', 'a', 'a', 'A', 'a', 'a', 'a']\n"
+     ]
+    }
+   ],
+   "source": [
+    "matches = re.findall(r\"(\\b[Aa])\", s)\n",
+    "print(matches)\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -66,11 +80,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "4b499ed5-e972-4116-a721-dbfb29e781d5",
+   "execution_count": 25,
+   "id": "311893b9",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[]\n"
+     ]
+    }
+   ],
+   "source": [
+    "email = \"emailrandom@gmail.com\"\n",
+    "emails = re.findall(r\"[a-z]* \\@\\.\", email)\n",
+    "print(emails)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -82,11 +108,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "ec71a1d9-d971-4119-9124-a3f993069eeb",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[]\n"
+     ]
+    }
+   ],
+   "source": [
+    "matches = re.findall(r\"([Aa - Zz]+[1-9]?\\-\\:\\,\\.)\", s)\n",
+    "print(matches)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -98,11 +135,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "084f2eb3-e67c-45bd-8460-b113b6794e82",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('randomurl', '/clase.com')]\n"
+     ]
+    }
+   ],
+   "source": [
+    "url = \"https://randomurl/clase.com\"\n",
+    "\n",
+    "pattern = r\"https://([^/]+)(.*)?\"\n",
+    "urlfind = re.findall(pattern, url)\n",
+    "print(urlfind)\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -114,11 +165,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "id": "a88f57ea-c034-49e3-9586-bcf1a9b795f8",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['423 256 8811']\n"
+     ]
+    }
+   ],
+   "source": [
+    "num = \"423 256 8811\"\n",
+    "pattern = r\"[1-9]{3} [1-9]{3} [1-9]{4}\"\n",
+    "find = re.findall(pattern, num)\n",
+    "print(find)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -130,11 +194,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "fc8577e1-8f37-4c29-91f1-314736687689",
+   "execution_count": 34,
+   "id": "cc85d7a2",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "Once upon a time, in the enchanted land of Regexville, there lived a group of intrepid explorers.\n",
+      "Their leader, Alice, was known for her love of adventure and her trusty email address, alice@example.com.\n",
+      "Her phone number, 123-456-7890, was her lifeline in times of trouble.\n",
+      "One day, Alice received a mysterious letter with today's date: 08/10/2023. The letter hinted at an upcoming quest.\n",
+      "The explorers gathered at the local inn, where they found a weathered map marked with a hashtag: #adventure.\n",
+      "The map pointed to a hidden treasure on the website https://www.treasurehunt.com. The inn's address was 123 Main Street, Regexville, ZIP: 12345-6789.\n",
+      "Their journey took them through the ancient forest, where they stumbled upon a cave with cryptic inscriptions:\n",
+      "\"Java is amazing!\" and \"Java is equally fascinating!\" The explorers knew they were on the right path.\n",
+      "Inside the cave, they found a device with the IP address 192.168.1.1 and a MAC addres of 00-B0-D0-63-C2-26, which held valuable clues.\n",
+      "\n",
+      "Among the explorers, there was a wordsmith who loved finding words with three consecutive vowels:\n",
+      "\"boasting,\" \"quizzical,\" \"genuine,\" and \"queue\" were some of his favorites.\n",
+      "As they continued their adventure, they encountered Lorem Ipsum, a lorem ipsum generator who spoke in Latin:\n",
+      "\"Lorem ipsum dolor sit amet, consectetur adipiscing elit.\"\n",
+      "In their pursuit, they stumbled upon an ancient book with mysterious ISBN-10 and ISBN-13 numbers:\n",
+      "ISBN-10: 123456789X and ISBN-13: 978-1234567890.\n",
+      "Their journey was filled with unexpected twists and turns, much like the regex patterns they used to decipher clues.\n",
+      "After a long day, the explorers gathered around a campfire, sharing tales of their encounters. They realized that every step of their adventure was a puzzle waiting to be solved, just like the regex challenges they had conquered.\n",
+      "As they drifted off to sleep under a starlit sky, they knew that their quest for treasure and knowledge had only just begun, and the magic of Regexville would continue to guide their way.\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "match = re.sub(r'Python','Java', s)\n",
+    "print(match)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -146,11 +243,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "id": "1a47bad6-3a06-42d4-a8fb-5b68b9b91173",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['12244-4521']\n"
+     ]
+    }
+   ],
+   "source": [
+    "zipcodes = \"12244-4521\"\n",
+    "pattern = r\"\\b\\d{5}(?:-\\d{4})?\\b\"\n",
+    "find = re.findall(pattern, zipcodes)\n",
+    "print(find)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -162,11 +272,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "id": "8c582872-3f44-46e1-b3d5-c185a248cedb",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[]\n"
+     ]
+    }
+   ],
+   "source": [
+    "pattern = r\"([\\b\\w*[aeiouAEIOU]{3,}\\w*\\b])\"\n",
+    "find = re.findall(pattern, s)\n",
+    "print(find)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -182,7 +304,14 @@
    "id": "b3ccfe62-4b3c-4ead-89f7-e33b52dd43c2",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "pattern = r'\"([^\"]+)\"'\n",
+    "    \n",
+    "    # Use re.findall to extract all matches based on the pattern\n",
+    "matches = re.findall(pattern, s)\n",
+    "\n",
+    "print(matches)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -329,7 +458,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
