--- a/Tp3_Regex.ipynb
+++ b/Tp3_Regex.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "id": "98bce14f-98b2-4855-99c3-284c9f0f1322",
    "metadata": {
     "jupyter": {
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 20,
    "id": "db4c55db-2416-43bc-83b3-07eea37df2d7",
    "metadata": {
     "scrolled": true
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 19,
    "id": "311893b9",
    "metadata": {},
    "outputs": [
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 18,
    "id": "ec71a1d9-d971-4119-9124-a3f993069eeb",
    "metadata": {},
    "outputs": [
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 13,
    "id": "084f2eb3-e67c-45bd-8460-b113b6794e82",
    "metadata": {},
    "outputs": [
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 14,
    "id": "a88f57ea-c034-49e3-9586-bcf1a9b795f8",
    "metadata": {},
    "outputs": [
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 15,
    "id": "cc85d7a2",
    "metadata": {},
    "outputs": [
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 16,
    "id": "1a47bad6-3a06-42d4-a8fb-5b68b9b91173",
    "metadata": {},
    "outputs": [
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 17,
    "id": "8c582872-3f44-46e1-b3d5-c185a248cedb",
    "metadata": {},
    "outputs": [
@@ -300,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "b3ccfe62-4b3c-4ead-89f7-e33b52dd43c2",
    "metadata": {},
    "outputs": [],
@@ -309,8 +309,7 @@
     "    \n",
     "    # Use re.findall to extract all matches based on the pattern\n",
     "matches = re.findall(pattern, s)\n",
-    "\n",
-    "print(matches)"
+    "\n"
    ]
   },
   {
@@ -323,11 +322,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "cf67cec5-9f4a-42ac-866f-4f28111d2f1f",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "pattern = r'\\b(\\d{2}/\\d{2}/\\d{4})\\b'\n",
+    "\n",
+    "matches = re.findall(pattern, s)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -339,11 +342,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "67e053c3-c06c-490d-83d2-13d5873df074",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "pattern = r'\\b[a-z]+\\b'\n",
+    "matches = re.findall(pattern, s)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -355,11 +361,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "93e50146-3390-46d7-8440-23dc4f0b5e5f",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['#adventure']\n"
+     ]
+    }
+   ],
+   "source": [
+    "pattern = r'#\\w+'\n",
+    "matches = re.findall(pattern, s)\n",
+    "print(matches)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -371,11 +389,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "cf458093-044e-47f8-bdac-4d8ce22669ee",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "pattern1 = r'\\b\\d{9}[\\dX]\\b'\n",
+    "pattern2 = r'\\b\\d{13}\\b'\n",
+    "matches1 = re.findall(pattern1, s)\n",
+    "matches2 = re.findall(pattern2, s)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -387,11 +410,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "8f44b3b6-be95-48ab-af59-e7bc2c26a652",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "pattern = r'\\b\\w{5}\\b'\n",
+    "matches = re.findall(pattern, s)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -403,11 +429,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "2a0082f4-c83b-44fc-a710-ae0dab06bc1d",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "pattern = r'\\b(?:\\d{1,3}\\.){3}\\d{1,3}\\b'\n",
+    "matches = re.findall(pattern, s)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -419,11 +448,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "65481a0a-c36c-4b2a-a354-0393c98520cc",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "pattern = r'\\b\\w+ing\\b'\n",
+    "matches = re.findall(pattern, s)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -435,11 +467,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "014b0956-6ef8-46a1-8f0b-635e8bbad63b",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "pattern = r'\\b([0-9A-Fa-f]{2}(:[0-9A-Fa-f]{2}){5})\\b'\n",
+    "matches = re.findall(pattern, s)"
+   ]
   }
  ],
  "metadata": {
